kubernetes-deployments/applications/minecraft/templates/velocity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocity
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: velocity
  template:
    metadata:
      labels:
        app.kubernetes.io/name: velocity
    spec:
      containers:
        - name: velocity
          image: dockcenter/velocity:3.2.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 25577
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          # resources:
          #   limits:
          #     cpu: 250m
          #     memory: 128Mi
          #   requests:
          #     cpu: 5m
          #     memory: 48Mi
          volumeMounts:
          # - name: config
          #   mountPath: /data/velocity.toml
          #   subPath: velocity.toml
          - name: data
            mountPath: /data
      volumes:
      # - name: config
      #   configMap:
      #     name: velocity-config
        - name: data
          persistentVolumeClaim:
            claimName: velocity
      securityContext:
        fsGroup: 100
