kubernetes-deployments/applications/minecraft/templates/velocity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: velocity
spec:
  ports:
  - name: http
    port: 25577
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: velocity
  type: ClusterIP
