kubernetes-deployments/applications/minecraft/templates/velocity/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc-velocity
spec:
  entryPoints:
    - mc-velocity
  routes:
  - match: HostSNI(`*`)
    services:
    - name: velocity
      port: 25577
